--- a/src/App.css
+++ b/src/App.css
@@ -259,6 +259,12 @@ margin-top: 20px;
 overflow: hidden;
 }
 
+.pcard-img img{
+  width: 100%;
+  height: 100%;
+  object-fit:cover;
+}
+
 .pcard-desc{
   padding: 1rem;
   height: 50%;
@@ -352,7 +358,7 @@ overflow: hidden;
   .pcard-img{
     width: 50%;
     height: 100%;
-    background-color: rgb(238, 230, 231);
+
     
   }
 
