--- a/src/App.css
+++ b/src/App.css
@@ -252,11 +252,10 @@ nav{
 } */
 
 .skill2{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: stretch;
-margin-top: 20px;
+  margin-top: 30px;
+display: block;
+  grid-template-rows: 1fr ;
+  height: 100%;
 }
 
 
@@ -377,6 +376,11 @@ overflow: hidden;
 /* tablets */
 @media only screen and (min-width: 768px) {
 
+  .skill2{
+    margin-top: 30px;
+    display: block;
+  }
+
   .flex-container{
     display: flex;
     gap: 20px;
@@ -462,6 +466,7 @@ overflow: hidden;
   }
 
   .skill2{
+
     justify-content: space-between;
     margin-top: 0;
   }
